# yolov8-digits-detection

./: .gitignore  Dockerfile  INFO.md  README.md  package-lock.json  pyproject.toml  requirements.txt  svhn.yaml  yolo_HWD+.yaml  yolov8n.onnx
frontend/: craco.config.js  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/assets/: detection_model.onnx  full_nms.onnx  index.js
frontend/src/components/: CustomSlider.js  DetectionRenderer.js  DrawableCanvas.js  Footer.js  Header.js  ImageLoader.js  ImageObjectDetector.js  Loader.js  ObjectDetector.js  SketchObjectDetector.js  index.js
frontend/src/constants/: examples.js  index.js  labels.json
frontend/src/style/: App.css  index.css  loader.css
frontend/src/utils/: detect.js  (+5 more)
models/: model.onnx  nms.onnx  postprocessing.onnx  preprocessing.onnx  yolo.onnx
notebooks/: dataset.ipynb  full_nms.onnx  pipeline.ipynb  postprocessing.onnx  preprocessing.onnx  test.onnx  yolov1.ipynb
src/: dataset.py  generate_yolo_samples.py  gradio_app.py  onnx_model.py  onnx_nms.py  onnx_preprocessing.py  ops.py  results.py  train.py  transforms.py  visualization.py
src/create_onnx_model/: __init__.py  create_onnx_models.py  detection_model.py  nms.py  postprocessing.py  preprocessing.py  utils.py  yolo.py
src/data/: generate_yolo_dataset.py  split_HWD+.py  svhn_dataset.py
src/object_detection/: __init__.py  base.py  with_onnx.py  with_python.py
src/utils/: labels.py  pylogger.py  utils.py  vision.py  visualization.py
src/yolo/: datamodule.py  eval.py  helpers.py  module.py  train.py  utils.py
(+12 files in other folders)
